--- a/README.Rmd
+++ b/README.Rmd
@@ -22,30 +22,30 @@ This package contains a small set of simulation functions. The fractional Browni
 The simulation 'model' is created separately from the function. This was done to enable easier randomization of the model parameters using the `jitter_params` function.
 
 # Example 
-Calling the function generates the model parameter set. The `gen` function creates a function which takes a single length parameter.
+Calling the base simulation function generates the model parameters. The `gen` returns a function which takes a single length parameter.
 
-```
+```{r, echo = TRUE}
 # The model
 alpha = 0.8
 mod <- weierstrass(alpha)
 # The function
 f <- gen(mod)
 plot(f(200), type = 'l', 
-             lwd = 1.7, 
-             col = "gray20", 
-             main = paste0("Random Weierstrass with alpha=", alpha)
+             lwd = 2, 
+             col = "burlywood4", 
+             main = paste0("Random Weierstrass with alpha=", alpha))
 ```
 
 # Jitter 
 
 The parameter model for the function can be perturbed using the `jitter_params` function. 
 
-```
+```{r, echo = TRUE}
 mod <- weierstrass(0.8)
-# Create 6
+# Create 6 versions with perturbed parameters
 fs <- replicate(6, gen(jitter_params(mod))(200))
 plot.ts(fs, 
         main = "Random Weierstrass with perturbed alpha parameter",
-        lwd = 1.2)
+        col = "burlywood4")
 ```
 
