--- a/README.Rmd
+++ b/README.Rmd
@@ -49,3 +49,11 @@ plot.ts(fs,
         col = "burlywood4")
 ```
 
+
+# Installation 
+
+```{r, echo = TRUE, eval = FALSE}
+install.packages("devtools") 
+install_github("nwaff/tssims")
+```
+
